@@ -118,6 +118,7 @@ Those improvements were implemented by Albina Starykova as part of an [Outreachy
  * Always show Add buttons, guide lines, Move up/down, Duplicate, Delete; in StreamField and Inline Panel (Thibaud Colas)
  * Make admin JS i18n endpoint accessible to non-authenticated users (Matt Westcott)
  * Autosize text area field will now correctly resize when switching between comments toggle states (Suyash Srivastava)
+ * Fix incorrect API serialisation for document `download_url` when `WAGTAILDOCS_SERVE_METHOD` is `direct` (Swojak-A)
 
 ### Documentation
 
